Fix image grid images not having their height restricted on mobile
Fix an error introduced in a513f36ef29a8dad22d194028e59a1bacd2164dc.
While trying to make the gallery thumbnail images full height, I
accidentally made *all* image grid images full height.

Instead of removing the maximum height, restore it and add a
change specifically to the gallery image grid images which allows
only their heights to be full.

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -33,6 +33,10 @@ h2 {
     .image-grid {
         grid-template-columns: 50% 50% !important;
     }
+
+    .image-grid img {
+        height: auto;
+    }
 }
 
 @media (max-width: 500px) {
