--- a/css/style.css
+++ b/css/style.css
@@ -300,6 +300,10 @@ ol, #page-content ul {
         grid-template-columns: 100%;
     }
 
+    .image-grid img {
+        height: 300px;
+    }
+
     .image-grid-full-height img {
         height: auto;
     }
